# SmartSense-Inbox

./: .firebaserc  .gitignore  Project_Description.txt  README.md  SETUP_GUIDE.md  SMS_FORWARDING_GUIDE.md  TROUBLESHOOTING.md  load-more-sample-data.ps1  start-backend.ps1  start-frontend.ps1  start-ngrok.ps1
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: sms.py
backend/app/core/: config.py  database.py
backend/app/models/: sms_model.py
backend/app/schemas/: sms.py
backend/app/services/: llm_client.py  sms_processor.py
backend/app/tests/: test_summary.py
frontend/: angular.json  ngsw-config.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
frontend/src/app/components/inbox/: inbox-new.css  inbox.css  inbox.html  inbox.ts
frontend/src/app/components/summary/: summary-new.css  summary.css  summary.html  summary.ts
frontend/src/app/models/: sms.model.ts
frontend/src/app/services/: pwa.service.ts  sms.service.ts
