[tool]
name = "SmartSense-Inbox"
version = "0.1.0"
description = "An intelligent SMS summarizer"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
sqlalchemy = "^1.4.27"
httpx = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"